# zena

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.py  build.zig  data_model.md  go.mod  go.sum  interim_server.py  notes.md  ols.json  testserver.js
archive/: Makefile  notes.md
archive/client/: client.c  client.h  state_handling.c
archive/db/: db.sqlite  schema.sql  user.sql
archive/server/: network.h  server.h
archive/shared/: README.md  queries.c  queries.h  transport.h
c/: Makefile  README.md  client_main.c  main.c  protocol.h  server_main.c
c/server/: server.c  server.h  state_handling.c  state_handling.h
c/shared/: protocol.h  queries.c
client/: README.md  client.c  client.h  state.go  state.h  state_handling.c  state_handling.h
cmd/server/: server.go
db/: channel  channel.sql  db.sqlite  db.sqlite-journal  schema.sql
db/migrations/: 20230605102059_initial_migration.sql  20230611103026_presence.sql
gui/: gui.c  gui.h
proto/: README.md  messaging.pb.go  messaging.proto  zena_protocol.pb.go  zena_protocol.proto  zena_protocol_grpc.pb.go
server/: README.md  entry.go  messaging_service.go  network.h  server.c  server.h  state_handling.c  state_handling.h
server/db/: database.sqlite3  schema.sql
shared/: containers.h  model.h  pack.h  protocol.c  protocol.h  queries.c  queries.h
src/: data.zig  db.rs  lib.rs  main.zig  model.rs  protocol.rs  protocol.zig  server.zig
src/client/: j_client.odin
src/model/: README.md  (+2 more)
ui/: go.mod  main.go  wails.json
zena/: j_core.odin  j_server.odin
(+16 files in other folders)
