[package]
name = "zena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
gpui = { git = "https://github.com/zed-industries/zed" }
pretty_env_logger = "0.5.0"
rusqlite = "0.30.0"
rusqlite_migration = "1.1.0"

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", rev = "4968e819c0d9b015437ffc694511e175801a17c7" }